<resources>
    <string name="app_name">Music Player</string>
    <string name="no_data">No data</string>

    <!--navigation view-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_item_library">Library</string>
    <string name="navigation_item_playlists">Playlists</string>
    <string name="navigation_item_folders">Folders</string>
    <string name="navigation_item_playing_queue">Playing queue</string>
    <string name="navigation_item_now_playing">Now Playing</string>
    <string name="navigation_item_setting">Settings</string>
    <string name="navigation_item_about">About</string>
    <string name="navigation_item_support">Support Developer</string>

    <!--main action bar-->
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle All</string>
    <string name="action_sortby">Sort by</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_as">View As</string>
    <string name="main_sort_by_az">A-Z</string>
    <string name="main_sort_by_za">Z-A</string>
    <string name="view_as_list">List</string>
    <string name="view_as_grid">Grid</string>

    <!--main activity-->
    <string name="songs_title">Song</string>
    <string name="albums_title">Album</string>
    <string name="artists_title">Artist</string>

    <!--artist fragment-->
    <string name="number_song_and_album">%2d albums | %2d songs</string>
    <string name="action_sort_by">Sort by</string>

    <!--detail album screen -->
    <string name="detail_album_sort_by_az">A-Z</string>
    <string name="detail_album_sort_by_za">Z-A</string>
    <string name="detail_album_sort_by_year">Year</string>
    <string name="detail_album_sort_by_number_songs">Track Number</string>
    <string name="detail_album_sort_by_duration">Duration</string>
    <string name="detail_album_about_artist">Artist</string>
    <string name="detail_album_add_queue">Add to queue</string>
    <string name="detail_album_add_playlist">Add to playlist</string>
    <string name="artist_of_album">Artist:</string>
    <string name="year_of_album">Year:</string>
    <string name="track_number_of_album">Track number:</string>

    <!--detail artist-->
    <string name="number_album">Albums (%d)</string>
    <string name="number_song">Songs (%d)</string>
</resources>
