<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_shuffle_all"
        android:orderInCategory="@integer/order_of_shuffle_all_item"
        android:title="@string/action_shuffle_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_equalizer"
        android:orderInCategory="@integer/order_of_equalizer_item"
        android:title="@string/action_equalizer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="@integer/order_of_settings_item"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
