<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.vuthanhvt.musicplayer.screen.detailalbum.DetailAlbumPresenter" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                android:textSize="@dimen/sp_12"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:id="@+id/expanded_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_250"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_empty_music"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_15"
                    android:text="@string/artist_of_album"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_toEndOf="@id/title_artist"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_15"
                    tools:text="Unknow"/>

                <TextView
                    android:id="@+id/title_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_40"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_15"
                    android:text="@string/year_of_album"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_toEndOf="@id/title_year"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_15"
                    tools:text="Unknow"/>

                <TextView
                    android:id="@+id/title_track_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_65"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_15"
                    android:text="@string/track_number_of_album"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_65"
                    android:layout_toEndOf="@id/title_track_number"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_15"
                    tools:text="Unknow"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/songs_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@android:drawable/ic_media_play"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>